fixed generate bug, refactoring, removed stats.json

--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -10,6 +10,7 @@ $pointBorderColor: white;
   display: inline-block;
   position: relative;
 }
+
 .canvas {
   cursor: pointer;
 }
@@ -37,4 +38,30 @@ $pointBorderColor: white;
   stroke-width: 2;
   will-change: r;
   transition: 150ms r ease;
+}
+
+.chart-popup-info {
+  tspan {
+    display: block;
+  }
+}
+
+.chart-popup-date {
+  fill: #bebebe;
+}
+
+.chart-popup-rate {
+  fill: black;
+}
+
+.chart-popup-index {
+  fill: black;
+
+  &.isGrowing {
+    fill: forestgreen;
+  }
+
+  &.isFalling {
+    fill: red;
+  }
 }
