refactoring, removed redundant functions

--- a/server/stats.template.hbs
+++ b/server/stats.template.hbs
@@ -1,9 +1,9 @@
 {
-    {{#repeat 12}}
+    {{#repeat 6 12}}
         "{{@index}}": [
             {{#repeat 12 16}}
                 {
-                    "currency": {{float 10 20 round=0.11}},
+                    "currency": {{float 10 22 round=0.11}},
                     "dayIdx": {{int 1 8}},
                     "growIndex": null
                 }
