--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -1,5 +1,5 @@
 $pointFillColor: #8eb4d0;
-$pointRadius: 4;
+$pointRadius: 5;
 $pointBorderColor: white;
 
 .Chart {
@@ -20,6 +20,7 @@ $pointBorderColor: white;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   font-weight: 600;
   text-transform: capitalize;
+  fill: #909090;
 }
 
 .chart-line {
